--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
 TWITTER_CREATOR="@getsaleor"
 TWITTER_SITE="https://saleor.io/"
 SITE_NAME="Next.js Commerce by Saleor"
-SALEOR_INSTANCE_URL=https://vercel.saleor.cloud/graphql/
+SALEOR_INSTANCE_URL=https://demo.saleor.io/graphql/
